the_project/frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: project
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - port: 3000
      targetPort: 3000
      #nodePort: 30000
