the_project/frontend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: project
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Frontend path
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-service
                port:
                  number: 3000
          # Backend path for browser
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend-service
                port:
                  number: 3002
